--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,47 @@
+.numbers, .operations, .equals, .decimal {
+    font-size: 40px;
+    width: 60px;
+    height: 60px;
+    height: auto;
+    border: 1px solid black;
+    display: inline-block;
+    margin: 10px;
+    
+}
+
+
+.calculator {
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    padding-top: 30px;
+    margin-top: 100px;
+    margin-left: 40%;
+}
+
+.display {
+    width: 300px;
+    height: 200px;
+    margin-bottom: 50px;
+    margin-left: 30px;
+    background-color: white;
+}
+
+.clear {
+    width: 300px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+.grid {
+    width: 360px;
+    height: auto;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    
+}
+
 footer {
     display: flex;
     position: absolute;
@@ -10,16 +54,4 @@ footer {
 
 }
 
-.numbers, .operations {
-    font-size: 45px;
-    width: 100px;
-    height: auto;
-    background-color: red;
-    border: 1px solid black;
-}
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
