--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,27 @@
     border: 1px solid black;
     display: inline-block;
     margin: 10px;
-    
+    border-radius: 10px;
+}
+
+.numbers:hover{
+    background-color: darkgray;
+}
+
+.operations:hover{
+    background-color: darkgray;
+}
+
+.equals:hover{
+    background-color: darkgray;
+}
+
+.decimal:hover{
+    background-color: darkgray;
+}
+
+.clear:hover {
+    background-color: darkgray;
 }
 
 
@@ -18,6 +38,7 @@
     padding-top: 30px;
     margin-top: 100px;
     margin-left: 40%;
+    border-radius: 10px;
 }
 
 .display {
@@ -26,12 +47,14 @@
     margin-bottom: 50px;
     margin-left: 30px;
     background-color: white;
+    border-radius: 10px;
 }
 
 .clear {
     width: 300px;
     margin-left: 15px;
     margin-bottom: 10px;
+    border-radius: 10px;
 }
 
 .grid {
@@ -39,7 +62,6 @@
     height: auto;
     margin-left: 10px;
     margin-bottom: 10px;
-    
 }
 
 footer {
@@ -55,3 +77,6 @@ footer {
 }
 
 
+.lower, .upper {
+    margin: 10px;
+}
