fixed string along, need to fix no operation calculations and replacing answer with new number

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,14 @@
     border-radius: 10px;
 }
 
+.erase {
+    background-color: red;
+}
+
+.clear {
+    background-color: green;
+}
+
 .operations {
     color: red;
 }
@@ -42,6 +50,10 @@
 }
 
 .clear:hover {
+    background-color: darkgray;
+}
+
+.erase:hover {
     background-color: darkgray;
 }
 
